--- a/enchanted.html
+++ b/enchanted.html
@@ -74,5 +74,16 @@
             </div>
         </div>
     </main>
+    <footer>
+        <section class="foot">
+            <div class="logo">
+                <a href="#" class="foot-logo"><img src="img/ohmyfood.png" alt="ohmyfood logo" width="200px" height="auto"></a> 
+            </div>
+            <p>Suggest a restaurant</p>
+            <p>Become a partner</p>
+            <p>Legal</p>
+            <p>Contact</p>
+        </section>
+    </footer>
 </body>
 </html>
