--- a/index.html
+++ b/index.html
@@ -49,7 +49,11 @@
                                     <h3>The Full Palette</h3>
                                     <p>New York</p>
                                 </div>
-                                <i class="fas fa-heart fa-2x" class="heart"></i>    
+                                <span class="fa-stack fa-2x hrt-stk">
+                                    <i class="far fa-heart fa-stack heart2"></i>
+                                    <i class="fas fa-heart fa-stack heart1"></i> 
+                                </span> 
+                              
                             </div>
                             <div class="new">
                                 <p>New</p>
