--- a/full-palette.html
+++ b/full-palette.html
@@ -23,7 +23,10 @@
     <main>
         <div class="fp-title">
                 <h1>The Full Pallete</h1>
-                <i class="fas fa-heart fa-2x" class="heart"></i>
+                <span class="fa-stack fa-2x target">
+                    <i class="fas fa-heart fa-stack-1x heart2"></i>
+                    <i class="far fa-heart fa-stack-1x heart3"></i>
+                </span>
             </div>
         <div class="fp-menu">
 
