--- a/gourmand.html
+++ b/gourmand.html
@@ -21,6 +21,13 @@
         </div>
     </header>
     <main>
+        <div class="fp-title">
+            <h1>The Full Pallete</h1>
+            <span class="fa-stack fa-2x target">
+                <i class="fas fa-heart fa-stack-1x heart2"></i>
+                <i class="far fa-heart fa-stack-1x heart3"></i>
+            </span>
+        </div>
         <div class="fp-menu">
 
             <div class="items">
