last final updates

--- a/bastille.html
+++ b/bastille.html
@@ -14,7 +14,8 @@
 <body>
     <header class="head-container">
         <div class="logo">
-            <a href="index.html" class="oh-logo"><img src="img/ohmyfood.png" alt="ohmyfood logo" width="200px" height="auto"></a> 
+            <a href="index.html"><i class="fas fa-arrow-left fa-2x back-btn"></i></a>
+            <a href="bastille.html" class="oh-logo"><img src="img/ohmyfood.png" alt="ohmyfood logo" width="200px" height="auto"></a> 
         </div>
         <div class="full-pal-img">
             <img src="img/bastille.jpg" alt="" width="100%" height="auto">
