--- a/gourmand.html
+++ b/gourmand.html
@@ -14,7 +14,8 @@
 <body>
     <header class="head-container">
         <div class="logo">
-            <a href="index.html" class="oh-logo"><img src="img/ohmyfood.png" alt="ohmyfood logo" width="200px" height="auto"></a> 
+            <a href="index.html"><i class="fas fa-arrow-left fa-2x back-btn"></i></a>
+            <a href="gourmand.html" class="oh-logo"><img src="img/ohmyfood.png" alt="ohmyfood logo" width="200px" height="auto"></a> 
         </div>
         <div class="full-pal-img">
             <img src="img/legourmand.jpg" alt="" width="100%" height="auto">
@@ -22,7 +23,7 @@
     </header>
     <main>
         <div class="fp-title">
-            <h1>The Full Pallete</h1>
+            <h1>Le Gourmand</h1>
             <span class="fa-stack fa-2x target">
                 <i class="fas fa-heart fa-stack-1x heart2"></i>
                 <i class="far fa-heart fa-stack-1x heart3"></i>
