--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <a href="index.html" class="oh-logo"><img src="img/ohmyfood.png" alt="ohmyfood logo" width="200px" height="auto"></a> 
         </div>
         <div class="location">
-            <h3>Paris, Belleville</h3>
+            <h3><i class="fas fa-map-marker-alt"></i>Paris, Belleville</h3>
         </div>
         
     </header>
@@ -36,9 +36,18 @@
         <section class="how">
             <h2 class="how-it">How it works</h2>
             <div class="how-btn">
-                <button class="choose"><span>Choose a restaurant</span></button>
-                <button class="create"><span>Create your menu</span></button>
-                <button class="go"><span>Go enjoy it at the restaurant</span></button>
+                <button class="how-list">
+                    <i class="fas fa-mobile-alt how-icon"></i>
+                    <span>Choose a restaurant</span>
+                </button>
+                <button class="how-list">
+                    <i class="fas fa-bars how-icon"></i>
+                    <span>Create your menu</span>
+                </button>
+                <button class="how-list">
+                    <i class="fas fa-store how-icon"></i>
+                    <span>Go enjoy it at the restaurant</span>
+                </button>
             </div>
         </section>
 
