--- a/gourmand.html
+++ b/gourmand.html
@@ -15,10 +15,10 @@
     <header class="head-container">
         <div class="logo">
             <a href="index.html"><i class="fas fa-arrow-left fa-2x back-btn"></i></a>
-            <a href="gourmand.html" class="oh-logo"><img src="img/ohmyfood.png" alt="ohmyfood logo" width="200px" height="auto"></a> 
+            <a href="gourmand.html" class="oh-logo"><img src="img/ohmyfood.png" alt="ohmyfood logo"></a> 
         </div>
         <div class="full-pal-img">
-            <img src="img/legourmand.jpg" alt="" width="100%" height="auto">
+            <img src="img/legourmand.jpg" alt="">
         </div>
     </header>
     <main class="rest">
