--- a/full-palette.html
+++ b/full-palette.html
@@ -15,7 +15,7 @@
     <header class="head-container">
         <div class="logo">
             <a href="index.html"><i class="fas fa-arrow-left fa-2x back-btn"></i></a>
-            <a href="full-palette.html" class="oh-logo"><img src="img/ohmyfood.png" alt="ohmyfood logo" width="200px" height="auto"></a> 
+            <a href="full-palette.html" class="oh-logo"><img src="img/ohmyfood.png" alt="ohmyfood logo"></a> 
         </div>
         <div class="full-pal-img">
             <img src="img/fullpalette.jpg" alt="">
